beautified statics.client.view.html

--- a/public/modules/statics/views/statics.client.view.html
+++ b/public/modules/statics/views/statics.client.view.html
@@ -1,3 +1,13 @@
 <section data-ng-controller="StaticsController">
-	This is the Statics view
+	<div class="container about">
+		<div class="row">
+			<img class="responsive card" src="//crosscent.s3.amazonaws.com/businesscard.png">
+		</div>
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fringilla velit vel lacinia sagittis. Vestibulum finibus, nisi et rutrum venenatis, justo erat consequat enim, at auctor elit lorem vestibulum dolor. Aliquam congue magna id euismod tempor. Duis pellentesque, libero sit amet posuere laoreet, enim felis dictum orci, a scelerisque eros turpis et augue. Curabitur eget tristique erat. Suspendisse ultrices tortor non libero molestie, euismod mattis nibh hendrerit. Nunc tempus elit et pharetra rutrum. Integer eu quam id eros tempor tristique. Praesent semper porta eros nec tempor. Fusce vel tempus nisi, eget eleifend felis. Nulla purus nunc, gravida nec rutrum id, porttitor et massa.</p>
+				<p>Donec a faucibus massa, vitae varius lacus. In semper tortor erat, convallis aliquet ipsum dapibus et. Donec ut fermentum neque, ut auctor nisl. Sed et neque ac augue scelerisque tempus id ac eros. Proin non luctus eros. Nullam a feugiat risus. Integer sodales sagittis enim quis cursus. Nullam suscipit volutpat tellus, vitae accumsan magna malesuada in. In finibus iaculis ipsum cursus elementum. Morbi aliquet sollicitudin velit et tempor. Pellentesque accumsan purus eu ipsum imperdiet convallis. Suspendisse nec ex sit amet sem sodales faucibus eget nec quam. Integer congue diam mi, id ultrices ante feugiat ac. Vestibulum iaculis velit et orci aliquet, sed viverra felis convallis. Etiam accumsan suscipit commodo. Integer gravida, tellus quis feugiat laoreet, lorem enim sollicitudin elit, in placerat erat turpis quis est.</p>
+			</div>
+		</div>
+	</div>
 </section>
