--- a/public/modules/statics/css/statics.css
+++ b/public/modules/statics/css/statics.css
@@ -1,5 +1,3 @@
-.about {
-}
 .about .card {
   width: 400px;
   margin: auto;
@@ -9,4 +7,16 @@
 .about p {
   font-size: 0.8em;
   margin-bottom: 1em;
+}
+
+.contact h1 {
+  text-align: center;
+}
+.contact h2, .contact p {
+  font-weight: normal;
+  font-size: 1em;
+  margin:0;
+}
+.contact .separate {
+  margin-bottom: 3em;
 }
